[add] Exercise about CSS format

--- a/CSS/format/vertical_align.css
+++ b/CSS/format/vertical_align.css
@@ -11,7 +11,7 @@ em {
   font-style: normal;
   font-weight: bold;
   color: #ff6600;
-  background-color: #fff
+  background-color: #fff;
 }
 td {
   width: 6em;
